--- a/views/homepage.html
+++ b/views/homepage.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1 id="title">Watch me Code</h1>
-
 <div id="intro">
     <p>
         <strong>Watch me Code</strong> is a live, real-time code room where one
         person codes in their browser and another person watches in another.
     </p>
     
-    <p></p>
+    <p>
+        <img id="stickmen" src="/images/stick_men_8bit.png" alt="stick men" width="505" height="255" />
+    </p>
 </div>
 
 <p>
@@ -20,8 +20,5 @@
 
 <p>
 </p>
-
-<script type="text/javascript" src="http://use.typekit.com/mau0hut.js"></script>
-<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
 {% endblock %}
