--- a/css/wmc.css
+++ b/css/wmc.css
@@ -65,14 +65,20 @@ ol, ul {
 --------------------------------------------------------------------------- */
 BODY {
     background-color: #FFF;
-    font-color: #FFF;
+    font-color: #333;
     font-family: arial, sans-serif;
     font-size: 0.83em;
+    color: #222;
 }
 
 P {
     margin: .5em 0;
     line-height: 1.4em;
+}
+
+A {
+    font-weight: bold;
+    color: #FFF;
 }
 
 
@@ -85,19 +91,89 @@ P {
     padding: 2em;
     -moz-border-radius-bottomleft: 2em;
     -moz-border-radius-bottomright: 2em;
+    -webkit-border-bottom-left-radius: 2em;
+    -webkit-border-bottom-right-radius: 2em;
+    position: relative;
+}
+
+
+/*  Navigation
+--------------------------------------------------------------------------- */
+#navigation {
+    position: absolute;
+    right: 1em;
+    top: 0
+}
+
+#navigation LI {
+    float: left;
+    margin-right: .2em;
+}
+
+#navigation A:link,
+#navigation A:visited
+{
+    display: block;
+    background-color: #438CB0;
+    padding: .5em 1em;
+    font-size: 0.9em;
+    font-weight: bold;
+    text-decoration: none;
+    color: #FFF;
+    -moz-border-radius-bottomleft: 1em;
+    -moz-border-radius-bottomright: 1em;
+    -webkit-border-bottom-left-radius: 1em;
+    -webkit-border-bottom-right-radius: 1em;
+
+    
+}
+
+#navigation A:hover,
+#navigation A:active
+{
+    color: #438CB0;
+    background-color: #FFF;
+    text-shadow: none;
 }
 
 
 /*  Homepage
 --------------------------------------------------------------------------- */
 H1#title {
+    text-align: left;
+    font-size: 3em;
+    font-weight: bold;
+    color: #FFF;
+    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.2);
+    letter-spacing: -0.05em;
+    margin-bottom: .4em;
+    display: inline;
+}
+
+#homepage H1#title {
     text-align: center;
     font-size: 5em;
     font-weight: bold;
     color: #FFF;
     text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.2);
     letter-spacing: -0.05em;
+    margin-bottom: .3em;
 }
+
+#intro {
+    text-align: center;
+    font-size: 1.1em;
+    color: #222;
+    text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
+
+}
+
+#stickmen {
+    border: 1em solid #FFF;
+    -moz-border-radius: 1em;
+    -webkit-border-radius: 1em;
+}
+
 
 
 /*  Create Project
@@ -107,12 +183,22 @@ H1#title {
 
 /*  Textareas
 --------------------------------------------------------------------------- */
-
+TEXTAREA {
+    width: 100%;
+}
 
 
 /*  Editor
 --------------------------------------------------------------------------- */
-
+H2#subtitle {
+    font-weight: bold;
+    color: #FFF;
+    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.2);
+    letter-spacing: -0.05em;
+    display: inline;
+    font-size: 1.6em;
+    margin-left: .5em;
+}
 
 
 /*  Observer
