--- a/views/editor.html
+++ b/views/editor.html
@@ -1,13 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Editor ID = {{ key }}</h1>
+<h2 id="subtitle">Editor View</h2>
 
-<form action="/save" method="post">
-    <input type="hidden" name="key" value="{{ key }}" />
-    <textarea id="code" cols="90" rows="20" name="content">{{ content }}</textarea>
-    <input type="submit" value="Save" />
-</form>
+<p>
+    <textarea id="code" rows="20" name="content">{{ content }}</textarea>
+</p>
+
 
 {% include "javascript.html" %}
 
